--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^0.27.2",
     "deprecated-react-native-prop-types": "^2.3.0",
     "formik": "^2.2.9",
@@ -32,6 +34,7 @@
     "react-native-screens": "^3.18.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.1",
+    "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^9.2.0",
     "yup": "^0.32.11"
   },
