--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/cli-platform-android": "^10.1.0",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
